@@ -1671,6 +1671,57 @@ VOID PhMwpOnCommand(
             }
         }
         break;
+    case ID_SERVICE_OPENFILELOCATION:
+        {
+            PPH_SERVICE_ITEM serviceItem = PhGetSelectedServiceItem();
+            SC_HANDLE serviceHandle;
+
+            if (serviceItem && (serviceHandle = PhOpenService(serviceItem->Name->Buffer, SERVICE_QUERY_CONFIG)))
+            {
+                PPH_STRING fileName = NULL;
+                LPQUERY_SERVICE_CONFIG config;
+
+                if (config = PhGetServiceConfig(serviceHandle))
+                {
+                    PhGetServiceDllParameter(&serviceItem->Name->sr, &fileName);
+
+                    if (!fileName)
+                    {
+                        PPH_STRING commandLine;
+
+                        commandLine = PhCreateString(config->lpBinaryPathName);
+
+                        if (config->dwServiceType & SERVICE_WIN32)
+                        {
+                            PH_STRINGREF dummyFileName;
+                            PH_STRINGREF dummyArguments;
+
+                            PhParseCommandLineFuzzy(&commandLine->sr, &dummyFileName, &dummyArguments, &fileName);
+
+                            if (!fileName)
+                                PhSwapReference(&fileName, commandLine);
+                        }
+                        else
+                        {
+                            fileName = PhGetFileName(commandLine);
+                        }
+
+                        PhDereferenceObject(commandLine);
+                    }
+
+                    PhFree(config);
+                }
+
+                if (fileName)
+                {
+                    PhShellExploreFile(PhMainWndHandle, fileName->Buffer);
+                    PhDereferenceObject(fileName);
+                }
+
+                CloseServiceHandle(serviceHandle);
+            }
+        }
+        break;
     case ID_SERVICE_PROPERTIES:
         {
             PPH_SERVICE_ITEM serviceItem = PhGetSelectedServiceItem();
